[tool.poetry]
name = "romania-parser"
version = "0.1.0"
description = ""
authors = ["dev.tolmachev <dev.tolmachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.7"
bs4 = "^0.0.2"
lxml = "^5.3.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
ua-generator = "^1.0.6"
aiofiles = "^24.1.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
